--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style/style.css">
-  <link rel="stylesheet" href="vender/bootstrap/css/bootstrap.css">
+  <link rel="stylesheet" href="/style/style.css">
+  <link rel="stylesheet" href="/vender/bootstrap/css/bootstrap.css">
 </head>
 <body>
   <div id="loader" class="pokemon"></div>
@@ -40,7 +40,7 @@
   <button id="next">Next</button></div>
 
 
-  <script src="js/index.js"></script>
-  <script src="vender/bootstrap/js/bootstrap.bundle.js"></script>
+  <script src="/js/index.js"></script>
+  <script src="/vender/bootstrap/js/bootstrap.bundle.js"></script>
 </body>
 </html>
